# multiverse-gamer-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  drop_all.py  local.db  local_migrations.db  pyproject.toml  render.yaml  requirements.txt
alembic/: README  env.py  script.py.mako
app/: main.py
app/api/v1/: __init__.py  auth.py  auth_deps.py  games.py  licenses.py  plans.py  routes_email_verification.py  sessions.py  users.py  webhooks.py
app/core/: auth_deps.py  config.py  email_sender.py  email_utils.py  error_handler.py  mercadopago.py  paypal.py  security.py
app/crud/: crud_email_verification.py  crud_game.py  crud_plan.py  crud_session.py  crud_user.py
app/database/: __init__.py  base.py  session.py
app/db/: session.py
app/integrations/: mercadopago.py  sendgrid_client.py
app/models/: __init__.py  game.py  models_email_verification.py  plan.py  session.py  user.py
app/schemas/: auth.py  game.py  plan.py  schemas_email_verification.py  session.py  user.py
integrations/: paypal.py
