[tool.poetry]
name = "multiverse-gamer-backend"
version = "1.0.0"
description = "Backend profesional para Multiverse Gamer"
authors = ["Rodrigo Aguirre"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
requests = "^2.32.5"
email-validator = "^2.1.0"
sendgrid = "^6.12.5"
alembic = "^1.17.2"
pydantic = "^2.12.4"
dnspython = "^2.8.0"
mako = "^1.3.10"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
